Introduce factory for creating ArrayDeque if JVM version supports it instead of using LinkedList.